--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,13 +1,13 @@
 
 h1{
-back-ground-color: green;
+background-color: green;
 }
 div{
-back-ground-color: lightblue;
+background-color: lightblue;
 }
 p{
-back-ground-color: yellow
+background-color: yellow
 }
 body{
-back-ground-color: #AF55FF;
+background-color: #AF55FF;
 }
