--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,9 @@
 
 h1{
-background-color: green;
+background-color: F8C4FA;
 }
 div{
-background-color: lightblue;
+background-color: ;
 }
 p{
 background-color: yellow;
